@@ -2,8 +2,9 @@ Jython NEWS
 
 For more details, please see https://hg.python.org/jython
 
-Developement tip
+Development tip
   Bugs fixed
+    - [ 2672 ] Integer formatting emits two minus signs with -2^31
     - [ 2688 ] ClassCastException when adding list of non-PyObjects
     - [ 2659 ] Determine console encoding without access violation (Java 9)
     - [ 2662 ] IllegalAccessException accessing public abstract method via PyReflectedFunction
